# yatui

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile  lefthook.yml  opencode.jsonc  package.json  pnpm-lock.yaml  rust-toolchain.toml  skills-lock.json
.agents/skills/development-standards/: SKILL.md
.agents/skills/development-standards/references/bun/: general.md
.agents/skills/development-standards/references/general/: git-commit-message.md  git-repository.md
.agents/skills/development-standards/references/nodejs/: general.md
.agents/skills/development-standards/references/python/: general.md
.agents/skills/development-standards/references/rust/: general.md  library.md  web-graphql.md  web-openapi.md
.agents/skills/development-standards/references/terraform/: general.md
.agents/skills/development-standards/references/typescript/: general.md
.claude/skills/: development-standards
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml  release.yml
comparisons/collection-lab-ratatui/: Cargo.toml  README.md
comparisons/collection-lab-ratatui/benches/: application_turns.rs
comparisons/collection-lab-ratatui/src/: lib.rs
comparisons/collection-lab-ratatui/tests/: equivalence.rs  memory_metrics.rs  output_metrics.rs  phase_metrics.rs
crates/arborui-backend-crossterm/src/: backend.rs
crates/arborui-backend-crossterm/tests/: pty_lifecycle.rs
crates/arborui-layout/src/: engine.rs  tree.rs
crates/arborui-render/src/: cell.rs  frame.rs  surface.rs
crates/arborui-runtime/src/: app.rs  proxy.rs  runner.rs
crates/arborui-terminal/src/: session.rs  state.rs
crates/arborui-test/src/: app.rs  tests.rs
crates/arborui-ui/src/: element.rs  focus.rs  node.rs  tree.rs
crates/arborui-widgets/src/: activation.rs  button.rs  checkbox.rs  dialog.rs  input.rs  lib.rs  tests.rs
crates/arborui/benches/: stabilization.rs
crates/arborui/src/: lib.rs
crates/arborui/tests/: performance_contracts.rs
crates/yatui/: Cargo.toml
crates/yatui-backend-crossterm/: Cargo.toml
crates/yatui-backend-crossterm/src/: backend.rs  output.rs
crates/yatui-backend-crossterm/tests/: pty_lifecycle.rs
crates/yatui-core/: Cargo.toml
crates/yatui-core/src/: color.rs  cursor.rs  geometry.rs  lib.rs  style.rs
crates/yatui-layout/: Cargo.toml
crates/yatui-layout/src/: engine.rs  lib.rs  style.rs
crates/yatui-render/: Cargo.toml
crates/yatui-render/src/: buffer.rs  canvas.rs  cell.rs  frame.rs  grapheme_store.rs  hit.rs  lib.rs  surface.rs
crates/yatui-runtime/: Cargo.toml
crates/yatui-runtime/src/: app.rs  clock.rs  command.rs  event.rs  lib.rs  proxy.rs  runner.rs  scheduler.rs
crates/yatui-terminal/: Cargo.toml
crates/yatui-terminal/src/: session.rs
crates/yatui-test/: Cargo.toml
crates/yatui-test/src/: app.rs  backend.rs  clock.rs  frame.rs  lib.rs  tests.rs
crates/yatui-text/: Cargo.toml
crates/yatui-text/src/: edit.rs  lib.rs  measure.rs
crates/yatui-ui/: Cargo.toml
crates/yatui-ui/src/: element.rs  event.rs  focus.rs  lib.rs  node.rs  reconcile.rs  tree.rs
crates/yatui-widgets/: Cargo.toml
crates/yatui-widgets/src/: block.rs  button.rs  column.rs  input.rs  lib.rs  list.rs  row.rs  scroll.rs  spacer.rs  stack.rs  tests.rs  text.rs
crates/yatui/benches/: stabilization.rs
crates/yatui/src/: lib.rs
crates/yatui/tests/: performance_contracts.rs
docs/: README.md  architecture.md  compatibility.md  crates.md  dependency-policy.md  releasing.md  rendering-and-text.md  terminal.md  testing-and-roadmap.md  ui-and-runtime.md
examples/collection-lab/: Cargo.toml
examples/collection-lab/benches/: visible_ranges.rs
examples/collection-lab/src/: lib.rs  log.rs  main.rs  overlay.rs  table.rs  unicode.rs
examples/collection-lab/tests/: collection_lab.rs
examples/collection-lab/tests/snapshots/: collection_lab__collection_lab_variable.snap
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs  main.rs
examples/counter/tests/: counter.rs
examples/counter/tests/snapshots/: counter__counter_incremented.snap  counter__counter_initial.snap
examples/focus-queue/: Cargo.toml
examples/focus-queue/src/: lib.rs  main.rs
examples/focus-queue/tests/: focus_queue.rs  live_ingress_metrics.rs  slow_sink_metrics.rs
examples/focus-queue/tests/snapshots/: focus_queue__focus_queue_activity_complete.snap  focus_queue__focus_queue_activity_idle.snap  focus_queue__focus_queue_edit_dialog.snap  focus_queue__focus_queue_empty.snap  focus_queue__focus_queue_scrolled.snap  focus_queue__focus_queue_task_added.snap  focus_queue__focus_queue_task_completed.snap  focus_queue__focus_queue_unicode_saved.snap
fuzz/: CORPUS.md  Cargo.toml
fuzz/corpus/render_transactions/: unicode
fuzz/corpus/text_edit_sequences/: ascii  unicode
fuzz/fuzz_targets/: render_transactions.rs  text_edit_sequences.rs
scripts/: check-package-contents.sh  publish.sh
