[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Ikuma Yamashita <me@ikuma.cloud>"]
repository = "https://github.com/46ki75/yatui"
homepage = "https://github.com/46ki75/yatui"
categories = ["command-line-interface"]
keywords = ["terminal", "tui", "cli", "ui"]

[workspace.dependencies]
yatui-core = { path = "crates/yatui-core", version = "=0.1.0" }
yatui-backend-crossterm = { path = "crates/yatui-backend-crossterm", version = "=0.1.0" }
yatui-render = { path = "crates/yatui-render", version = "=0.1.0" }
yatui-runtime = { path = "crates/yatui-runtime", version = "=0.1.0" }
yatui-layout = { path = "crates/yatui-layout", version = "=0.1.0" }
yatui-terminal = { path = "crates/yatui-terminal", version = "=0.1.0" }
yatui-text = { path = "crates/yatui-text", version = "=0.1.0" }
yatui-ui = { path = "crates/yatui-ui", version = "=0.1.0" }
yatui-widgets = { path = "crates/yatui-widgets", version = "=0.1.0" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
