[package]
name = "arborui-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
unicode-segmentation = "=1.13.3"
arborui-core = { path = "../crates/arborui-core" }
arborui-render = { path = "../crates/arborui-render" }
arborui-text = { path = "../crates/arborui-text" }

[workspace]

[[bin]]
name = "text_edit_sequences"
path = "fuzz_targets/text_edit_sequences.rs"
test = false
doc = false
bench = false

[[bin]]
name = "render_transactions"
path = "fuzz_targets/render_transactions.rs"
test = false
doc = false
bench = false
