[package]
name = "yatui-backend-crossterm"
description = "Crossterm terminal backend for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
crossterm = "0.29.0"
yatui-core = { workspace = true }
yatui-render = { workspace = true }
yatui-terminal = { workspace = true }

[dev-dependencies]
portable-pty = "=0.9.0"
yatui-text = { workspace = true }
