[package]
name = "yatui-layout"
description = "Backend-independent terminal cell layout for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
taffy = { version = "0.12.1", default-features = false, features = ["std", "taffy_tree", "flexbox"] }
yatui-core = { workspace = true }
