[package]
name = "yatui-render"
description = "Grapheme-aware cell buffers, composition, and frame diffing for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
yatui-core = { workspace = true }
yatui-text = { workspace = true }
