[package]
name = "yatui-runtime"
description = "Backend-neutral application runtime and scheduler for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
yatui-core = { workspace = true }
yatui-render = { workspace = true }
yatui-terminal = { workspace = true }
yatui-ui = { workspace = true }
