[package]
name = "yatui-widgets"
description = "Standard controlled widgets for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
yatui-core = { workspace = true }
yatui-layout = { workspace = true }
yatui-text = { workspace = true }
yatui-ui = { workspace = true }

[dev-dependencies]
yatui-render = { workspace = true }
