[package]
name = "yatui"
description = "A Rust-native terminal user interface library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["crossterm"]
crossterm = ["dep:yatui-backend-crossterm"]

[dependencies]
yatui-backend-crossterm = { workspace = true, optional = true }
yatui-core = { workspace = true }
yatui-layout = { workspace = true }
yatui-render = { workspace = true }
yatui-runtime = { workspace = true }
yatui-terminal = { workspace = true }
yatui-text = { workspace = true }
yatui-ui = { workspace = true }
yatui-widgets = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "stabilization"
harness = false
