[package]
name = "arborui-example-focus-queue"
description = "Pilot task queue and focus timer built with the public arborui API"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arborui = { workspace = true }

[dev-dependencies]
arborui-test = { workspace = true }
